--- a/archive/04-ingress.yaml
+++ b/archive/04-ingress.yaml
@@ -5,7 +5,7 @@ metadata:
   name: game2048
   annotations:
     kubernetes.io/ingress.class: alb
-    alb.ingress.kubernetes.io/load-balancer-name: fastc-alb
+    alb.ingress.kubernetes.io/load-balancer-name: kepler-2048-alb
     alb.ingress.kubernetes.io/target-type: ip
     alb.ingress.kubernetes.io/scheme: internet-facing
     alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
